--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1037,6 +1037,15 @@
     </div>
   </section>
 
+  <section class="summer-collection">
+    <a href="#">
+      <img
+        src="https://cdn.shopify.com/s/files/1/0531/1604/3454/files/1530x300.jpg?v=1614293348"
+        alt="summer-collection"
+      />
+    </a>
+  </section>
+
   <br />
   <br />
   <br />
