--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1037,7 +1037,7 @@
     </div>
   </section>
 
-  <section class="summer-collection">
+  <section class="seasonal-collection">
     <a href="#">
       <img
         src="https://cdn.shopify.com/s/files/1/0531/1604/3454/files/1530x300.jpg?v=1614293348"
