--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1037,13 +1037,89 @@
     </div>
   </section>
 
+  <!-- /----::seasonal-collection::----/ -->
   <section class="seasonal-collection">
-    <a href="#">
+    <a class="product-banner-hover-one" href="#">
       <img
         src="https://cdn.shopify.com/s/files/1/0531/1604/3454/files/1530x300.jpg?v=1614293348"
         alt="summer-collection"
       />
     </a>
+  </section>
+
+  <!-- /----::popular-product::----/ -->
+  <section class="popular-product">
+    <div class="top-categories-card-sec">
+      <!-- /----::popular-products-section-title::----/ -->
+      <div class="product-section-title day-deal-sec-title">
+        <div class="product-title-heading">
+          <h3>{{ "top categories" | titlecase }}</h3>
+        </div>
+      </div>
+
+      <!-- /----::popular-products-card-section::----/ -->
+      <div class="popular-products-cards">
+        <ng-container *ngFor="let data of [0, 0, 0, 0, 0, 0]">
+          <div class="day-deal-popular-card popular-products-card">
+            <div class="day-deal-popular-img popular-product-card-img">
+              <a href="#">
+                <img
+                  src="https://cdn.shopify.com/s/files/1/0531/1604/3454/products/15_5e56f683-44a7-4242-b99a-cce991374e32_large.jpg?v=1611754098"
+                  alt="day-deal"
+                />
+              </a>
+
+              <a href="#">
+                <img
+                  src="https://cdn.shopify.com/s/files/1/0531/1604/3454/products/16_319dba49-1821-48b3-a301-7ba31cb21d4a_large.jpg?v=1611754099"
+                  alt="day-deal"
+                />
+              </a>
+            </div>
+            <div class="day-deal-popular-content popular-product-content">
+              <div class="day-deal-title popular-product-card-title">
+                <h3>
+                  <a href="#">{{
+                    "consectetur adipiscing elit".length >= 18
+                      ? "consectetur adipiscing elit".slice(0, 16) + "..."
+                      : ("consectetur adipiscing elit" | titlecase)
+                  }}</a>
+                </h3>
+              </div>
+              <hr />
+              <div class="day-deal-rating">
+                <div class="day-deal-rate popular-product-rate">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star-half-alt"></i>
+                  <i class="far fa-star"></i>
+                </div>
+
+                <div class="day-deal-info-text popular-product-info-text">
+                  <h6>
+                    <span>
+                      {{ "$" }}{{ "155.00" }} {{ "usd" | uppercase }}
+                    </span>
+                  </h6>
+                </div>
+              </div>
+            </div>
+          </div>
+        </ng-container>
+      </div>
+    </div>
+
+    <div class="category-latest-big-img product-banner-hover-one popular-product-big-img">
+      <img
+        src="https://cdn.shopify.com/s/files/1/0531/1604/3454/files/360x395.jpg?v=1614293348"
+        alt="top-categories-product"
+      />
+    </div>
+
+    <!-- <div class="popular-products-card">
+
+    </div> -->
   </section>
 
   <br />
