--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1588,3 +1588,154 @@
     margin-top: 20px;
   }
 }
+
+/* /-----::POPULAR-PRODUCT::-----/ */
+.popular-product {
+  display: grid;
+  grid-template-columns: 4fr 1.3fr;
+  margin-top: 40px;
+  height: auto;
+  grid-column-gap: 30px;
+}
+
+.popular-products-cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 30px;
+}
+
+@media (max-width: 1456px) {
+  .popular-product {
+    display: grid;
+    grid-template-columns: 4fr 1.5fr;
+    margin-top: 40px;
+    height: auto;
+    grid-column-gap: 30px;
+  }
+}
+
+@media (max-width: 1428px) {
+  .popular-products-card .popular-product-card-img {
+    position: relative;
+    width: 100%;
+    height: 130px;
+    transition: 500ms;
+    background-color: transparent;
+  }
+
+  .popular-products-card .popular-product-card-img a {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 130px;
+    transition: all 0.8s ease;
+  }
+
+  .popular-product-big-img {
+    height: 374px !important;
+  }
+}
+
+@media (max-width: 1404px) {
+  .popular-product {
+    grid-gap: 20px;
+  }
+
+  .popular-products-cards {
+    grid-gap: 20px;
+  }
+
+  .popular-product-big-img {
+    height: 365px !important;
+  }
+}
+
+@media (max-width: 1420px) {
+  .popular-product-card-img {
+    height: 135px !important;
+  }
+  .popular-product-card-img a {
+    height: 135px !important;
+  }
+}
+
+@media (max-width: 1400px) {
+  .popular-product {
+    grid-template-columns: 1fr;
+    grid-column-gap: 20px;
+  }
+  .popular-products-cards {
+    grid-gap: 20px;
+  }
+
+  .popular-product-big-img {
+    display: none;
+  }
+}
+
+@media (max-width: 1338px) {
+  .popular-products-card {
+    grid-template-columns: 2fr 4fr;
+  }
+}
+
+@media (max-width: 1084px) {
+  .popular-products-card {
+    grid-template-columns: 2.3fr 4fr;
+  }
+
+  .popular-product-card-img {
+    height: 130px !important;
+  }
+
+  .popular-product-card-img a {
+    height: 130px !important;
+  }
+
+  .popular-product-content {
+    padding: 13px 6px 10px 6px;
+  }
+}
+
+@media (max-width: 992px) {
+  .popular-products-cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 30px;
+  }
+}
+
+@media (max-width: 704px) {
+  .popular-products-cards {
+    grid-gap: 20px;
+  }
+}
+
+@media (max-width: 667px) {
+  .popular-products-cards {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .popular-products-card {
+    grid-template-columns: 1.5fr 4fr;
+  }
+}
+
+@media (max-width: 456px) {
+  .popular-products-card {
+    grid-template-columns: 1.8fr 4fr;
+  }
+}
+
+@media (max-width: 390px) {
+  .popular-products-card {
+    grid-template-columns: 2fr 4fr;
+  }
+}
+
+@media (max-width: 332px) {
+  .popular-products-card {
+    grid-template-columns: 2.2fr 4fr;
+  }
+}
