--- a/src/theme/base.scss
+++ b/src/theme/base.scss
@@ -694,3 +694,51 @@ ul {
   fill: $color-white;
 }
 /* /-----::DAY-DEAL-POPULAR-CARD-END::-----/ */
+
+/* /-----::POPULAR-PRODUCTS-CARD-START::-----/ */
+.popular-products-card .popular-product-card-img {
+  position: relative;
+  width: 100%;
+  height: 150px;
+  transition: 500ms;
+  background-color: transparent;
+}
+
+.popular-products-card .popular-product-card-img a {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 150px;
+  transition: all 0.8s ease;
+}
+
+.popular-product-card-title h3 {
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.popular-product-info-text h6 {
+  margin-bottom: 0px !important;
+}
+
+.popular-product-info-text h6 span {
+  color: $color-black !important;
+  font-weight: 500;
+  margin: 0px !important;
+  font-size: 16px !important;
+}
+
+.popular-product-rate {
+  margin: 6px 0px;
+}
+
+.popular-product-big-img {
+  height: 405px !important;
+}
+
+.popular-product-big-img img {
+  height: 100%;
+}
+
+/* /-----::POPULAR-PRODUCTS-CARD-END::-----/ */
