add company logo section

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1110,16 +1110,114 @@
       </div>
     </div>
 
-    <div class="category-latest-big-img product-banner-hover-one popular-product-big-img">
+    <div
+      class="category-latest-big-img product-banner-hover-one popular-product-big-img"
+    >
       <img
         src="https://cdn.shopify.com/s/files/1/0531/1604/3454/files/360x395.jpg?v=1614293348"
         alt="top-categories-product"
       />
     </div>
-
     <!-- <div class="popular-products-card">
 
     </div> -->
+  </section>
+
+  <!-- /----::company-logo-image::----/ -->
+  <section class="company-logo">
+    <div class="company-logo-images">
+      <ng-container>
+        <div class="company-logo-image">
+          <a href="#">
+            <img
+              src="https://cdn.shopify.com/s/files/1/0531/1604/3454/files/menufacture-4_225x150@2x.png?v=1614293169"
+              alt="complany-logo"
+            />
+          </a>
+        </div>
+
+        <div class="company-logo-image">
+          <a href="#">
+            <img
+              src="https://cdn.shopify.com/s/files/1/0531/1604/3454/files/menufacture-3_225x150@2x.png?v=1614293168"
+              alt="complany-logo"
+            />
+          </a>
+        </div>
+
+        <div class="company-logo-image">
+          <a href="#">
+            <img
+              src="https://cdn.shopify.com/s/files/1/0531/1604/3454/files/menufacture-2_225x150@2x.png?v=1614293168"
+              alt="complany-logo"
+            />
+          </a>
+        </div>
+
+        <div class="company-logo-image">
+          <a href="#">
+            <img
+              src="https://cdn.shopify.com/s/files/1/0531/1604/3454/files/menufacture-1_225x150@2x.png?v=1614293168"
+              alt="complany-logo"
+            />
+          </a>
+        </div>
+
+        <div class="company-logo-image">
+          <a href="#">
+            <img
+              src="https://cdn.shopify.com/s/files/1/0531/1604/3454/files/menufacture-5_225x150@2x.png?v=1614293169"
+              alt="complany-logo"
+            />
+          </a>
+        </div>
+
+        <div class="company-logo-image">
+          <a href="#">
+            <img
+              src="https://cdn.shopify.com/s/files/1/0531/1604/3454/files/menufacture-6_225x150@2x.png?v=1614293169"
+              alt="complany-logo"
+            />
+          </a>
+        </div>
+
+        <div class="company-logo-image">
+          <a href="#">
+            <img
+              src="https://cdn.shopify.com/s/files/1/0531/1604/3454/files/menufacture-7_225x150@2x.png?v=1614293169"
+              alt="complany-logo"
+            />
+          </a>
+        </div>
+
+        <div class="company-logo-image">
+          <a href="#">
+            <img
+              src="https://cdn.shopify.com/s/files/1/0531/1604/3454/files/menufacture-8_225x150@2x.png?v=1614293169"
+              alt="complany-logo"
+            />
+          </a>
+        </div>
+
+        <div class="company-logo-image">
+          <a href="#">
+            <img
+              src="https://cdn.shopify.com/s/files/1/0531/1604/3454/files/menufacture-9_225x150@2x.png?v=1614293169"
+              alt="complany-logo"
+            />
+          </a>
+        </div>
+
+        <div class="company-logo-image">
+          <a href="#">
+            <img
+              src="https://cdn.shopify.com/s/files/1/0531/1604/3454/files/menufacture-11_225x150@2x.png?v=1614293169"
+              alt="complany-logo"
+            />
+          </a>
+        </div>
+      </ng-container>
+    </div>
   </section>
 
   <br />
