add company host and add footer

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1281,9 +1281,72 @@
       </ng-container>
     </div>
   </section>
+</div>
 
-  <br />
-  <br />
-  <br />
-  <br />
+<div class="foot-sp">
+  <!-- /----::foot-sp::----/ -->
+  <section class="custom-container">
+    <div class="foot-sp-child">
+      <!-- /----::comapny-host::----/ -->
+      <div class="company-host">
+        <div class="company-host-img">
+          <img
+            src="https://cdn.shopify.com/s/files/1/0531/1604/3454/files/testi1_100x100.png?v=1614292865"
+            alt="host-name"
+          />
+        </div>
+        <div class="company-host-content">
+          <div class="host-title">
+            <h4>
+              <span>Mr. Jhone Deo</span>
+              &nbsp;&nbsp;
+              <span> - {{ "Designer" | titlecase }}</span>
+            </h4>
+          </div>
+          <hr />
+          <div class="host-content-info">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatem earum a eum corporis quasi et enim minima explicabo.
+              Officiis doloribus nulla optio quasi similique iusto ratione sed
+              tenetur ex doloremque!
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- /----::company-newsletter::----/ -->
+      <div class="company-newsletter">
+        <h3>{{ "SIGN UP FOR NEWSLETTER" | uppercase }}</h3>
+        <div class="news-letter-form">
+          <form>
+            <div class="newsletter-input">
+              <input type="text" placeholder="Email address" />
+            </div>
+            <div class="newsletter-button">
+              <button type="submit">
+                {{ "subscribe" | uppercase }}
+              </button>
+            </div>
+          </form>
+        </div>
+        <div class="follow-us">
+          <h4>{{ "Follow us" | titlecase }}</h4>
+          <div class="follow-button">
+            <button type="button">
+              <i class="fab fa-twitter"></i>
+            </button>
+            <button type="button">
+              <i class="fab fa-facebook-f"></i>
+            </button>
+            <button type="button">
+              <i class="fab fa-pinterest-p"></i>
+            </button>
+            <button type="button">
+              <i class="fab fa-instagram"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </div>
