--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1869,7 +1869,232 @@
 }
 
 /* /-----::FOOT-SP-::-----/ */
-.foot-sp{
+.foot-sp {
+  background-color: #f5f5f5;
+  padding: 23px 0;
+  margin-top: 40px;
+}
+
+.foot-sp-child {
   width: 100%;
-  
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.company-host {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding-right: 16px;
+}
+
+.company-host-img {
+  min-width: 100px;
+  max-width: 100px;
+  min-height: 100px;
+  max-height: 100px;
+  border-radius: 50%;
+  border: 2px solid $color-red-crimson;
+  margin-right: 16px;
+  margin-top: 5px;
+}
+
+.company-host-img img {
+  width: 100%;
+  height: 100%;
+}
+
+.company-host-content {
+  margin-left: 16px;
+  padding-right: 16px;
+}
+
+.company-host-content .host-title h4 {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.company-host-content .host-title h4 span:first-child {
+  color: $color-red-crimson;
+  font-size: 16px;
+  font-weight: 600;
+  text-transform: capitalize;
+  letter-spacing: 0.5px;
+  display: inline-block;
+}
+
+.company-host-content .host-title h4 span:last-child {
+  font-size: 12px;
+  text-transform: capitalize;
+  letter-spacing: 0.5px;
+  margin: 0;
+  font-weight: 400;
+  display: inline-block;
+  vertical-align: middle;
+  color: rgb(97, 96, 96);
+  padding-top: 2px;
+}
+
+.company-host hr {
+  width: 60px;
+  margin: 15px 0;
+  background-color: $color-light-gray-2;
+}
+
+.host-content-info p {
+  color: $color-black-2;
+  margin-top: 15px;
+  margin-bottom: 0;
+  font-size: 13px;
+  letter-spacing: 1px;
+}
+
+/* /-----::COMPANY-NEWSLETTER::-----/ */
+.company-newsletter {
+  border-left: 1px solid #e5e5e5;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  padding-left: 16px;
+}
+
+.company-newsletter h3 {
+  font-size: 22px;
+  font-weight: 600;
+  color: $color-black;
+  margin-bottom: 20px;
+}
+
+.news-letter-form {
+  width: 100%;
+  border-radius: 4px;
+  overflow: hidden;
+  margin-bottom: 30px;
+}
+
+.news-letter-form form {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.newsletter-input {
+  width: 100%;
+}
+.newsletter-input input {
+  width: 100%;
+  padding: 3px 15px;
+  background: #fff;
+  height: 42px;
+  border: none;
+}
+
+.newsletter-button {
+  height: 42px;
+}
+
+.newsletter-button button {
+  height: 100%;
+  border: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 2px 20px 0px 20px;
+  background-color: $color-red-crimson;
+  color: $color-white;
+}
+
+.follow-us {
+  display: flex;
+  align-items: center;
+  justify-items: center;
+}
+
+.follow-us h4 {
+  padding: 0 40px;
+  margin-bottom: 0;
+  color: #000;
+  font-size: 18px;
+}
+
+.follow-button {
+  display: flex;
+  align-items: center;
+}
+
+.follow-button button {
+  min-width: 40px;
+  min-height: 40px;
+  text-align: center;
+  transition: 0.3s ease;
+  border-radius: 5px;
+  background: #fff;
+  color: #555;
+  border: 0px;
+  outline: 0px;
+  margin-right: 12px;
+}
+
+.follow-button button i {
+  font-size: 14px;
+}
+
+.follow-button button:hover {
+  background-color: $color-black-2;
+  color: $color-white;
+}
+
+.follow-button button:last-child {
+  margin-right: 0px;
+}
+
+@media (max-width: 992px) {
+  .foot-sp-child {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .company-newsletter {
+    padding: 0px;
+    border-top: 1px solid #e5e5e5;
+    border-left: 0px;
+    margin-top: 20px;
+    padding-top: 20px;
+  }
+}
+
+@media (max-width: 612px) {
+  .company-host {
+    flex-direction: column;
+  }
+
+  .company-host-img {
+    margin-bottom: 10px;
+    margin-right: 0px;
+  }
+
+  .company-host-content .host-title h4 {
+    justify-content: center;
+  }
+
+  .company-host-content hr {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .host-content-info p {
+    text-align: center;
+  }
+}
+
+@media (max-width: 472px) {
+  .follow-us h4 {
+    display: none;
+  }
+
+  .newsletter-button button {
+    padding: 2px 10px 0px 10px;
+  }
 }
